# BW_multi_sensor_fusion

./: .gitmodules  README.md  publish.cpp
Modules/bold_timestamp_alignment/: FusedState.msg  README.md  fusion_node.cpp  imu_w_norm_calculate.cpp  launch_cpp.launch
base/: README.md
base/bw_ros_driver/: CMakeLists.txt  README.md  package.xml
base/bw_ros_driver/config/: can_params.yaml  common_params.yaml
base/bw_ros_driver/include/bw_ros_driver/: can_imu_aggregator.hpp
base/bw_ros_driver/launch/: bw_ros_can.launch  bw_ros_com.launch
base/bw_ros_driver/src/: bw_node_can.cpp  bw_node_nova.cpp  bw_node_standard.cpp  standard_parser.cpp
bold_timestamp_alignment/: cam_w_norm_calculate.cpp  time_offset_calculate_portion.cpp  timestamp_correct.cpp
middle/tools/: README.md
middle/tools/VINS_vi_sync/: README.md
middle/tools/VINS_vi_sync/config/euroc/: euroc_config.yaml
middle/tools/VINS_vi_sync/feature_tracker/: CMakeLists.txt
middle/tools/VINS_vi_sync/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h  tic_toc.h
middle/tools/VINS_vi_sync/feature_tracker/src/image_preprocess/: image_converter.cpp  image_converter.h  image_format.h
middle/tools/VINS_vi_sync/vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
middle/tools/livox_custom_downsample_demo/: CMakeLists.txt  package.xml
middle/tools/livox_custom_downsample_demo/config/: livox_downsample.rviz
middle/tools/livox_custom_downsample_demo/launch/: livox_downsample_rviz.launch.py
middle/tools/livox_custom_downsample_demo/src/: livox_custom_voxel_downsample.cpp
middle/tools/multi-sensor_fusion/: README.md
middle/tools/multi-sensor_fusion/bw_ros_driver/: CMakeLists.txt  README.md
middle/tools/multi-sensor_fusion/bw_ros_driver/config/: common_params.yaml
middle/tools/multi-sensor_fusion/bw_ros_driver/launch/: bw_ros_auto.launch  rviz.launch
middle/tools/multi-sensor_fusion/bw_ros_driver/src/: bw_node_nova.cpp  bw_node_standard.cpp
middle/tools/multi-sensor_fusion/lidar_imu_calib/: CMakeLists.txt  README.md  package.xml
middle/tools/multi-sensor_fusion/lidar_imu_calib/src/: lidar_imu_calib_node.cpp
middle/tools/multi-sensor_fusion/livox_ros_driver2/: CMakeLists.txt
middle/tools/multi-sensor_fusion/livox_ros_driver2/config/: MID360_config.json
middle/tools/multi-sensor_fusion/mid_lidar_imu_calib/: CMakeLists.txt  README.md  package.xml
middle/tools/multi-sensor_fusion/mid_lidar_imu_calib/src/: mid_lidar_imu_calib_node.cpp
middle/tools/multi-sensor_fusion/sensor_time_align/: CMakeLists.txt  README.md  package.xml
middle/tools/multi-sensor_fusion/sensor_time_align/launch/: camera_imu_data.launch  camera_imu_data_save.launch  lidar_camera_imu_portion_omega.launch  offline.launch
middle/tools/multi-sensor_fusion/sensor_time_align/msg/: FusedState.msg
middle/tools/multi-sensor_fusion/sensor_time_align/src/: camera_imu_norm.cpp  camera_imu_portion.cpp  fusion_node.cpp  image_raw_node.cpp  image_topic_convert.cpp  imu_raw_node.cpp  imu_raw_node_save.cpp  imu_topic_convert.cpp  imu_w_norm_calculate.cpp  lidar_camera_imu.cpp  mid_lidar_camera_imu.cpp  mid_lidar_imu_distance.cpp  mid_lidar_imu_omega.cpp  publish_node.cpp  split.cpp  time_offset_calculate_norm.cpp  time_offset_calculate_portion.cpp
middle/tools/sensor_time_align/: CMakeLists.txt  README.md  package.xml
middle/tools/sensor_time_align/launch/: launch_cpp.launch  node_output_topic.launch  node_test_output_topic_data.launch  online_sensor_time_align.launch  online_sensor_time_align_norm.launch  online_sensor_time_align_portion.launch
middle/tools/sensor_time_align/msg/: FusedState.msg
middle/tools/sensor_time_align/src/: cam_w_norm_calculate.cpp  fusion_node.cpp  image_raw_node.cpp  image_raw_node_test.cpp  imu_raw_node.cpp  imu_raw_node_test.cpp  imu_w_norm_calculate.cpp  publish.cpp  split.cpp  time_offset_calculate_norm.cpp  time_offset_calculate_portion.cpp  timestamp_correct.cpp  timestamp_correct_node.cpp  timestamp_correct_node_norm.cpp  timestamp_correct_node_portion.cpp
middle/tools/spatiotemporal_joint_calibration/: README.md
middle/tools/spatiotemporal_joint_calibration/sensor_time_align/: CMakeLists.txt  package.xml
middle/tools/spatiotemporal_joint_calibration/sensor_time_align/launch/: online_camera_imu_align_norm.launch  online_camera_imu_align_portion.launch
middle/tools/spatiotemporal_joint_calibration/sensor_time_align/src/: cam_w_norm_calculate.cpp  camera_imu_norm.cpp  camera_imu_portion.cpp  image_raw_node_save.cpp  lidar_camera_imu.cpp  lidar_imu_distance.cpp  lidar_imu_omega.cpp  timestamp_correct.cpp
