<?xml version="1.0"?>
<package format="2">
  <name>bw_ros_driver</name>
  <version>1.0.0</version>
  <description>The bw_ros_driver package</description>
  <maintainer email="zhangzihao@bwsensing.com">zzh</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>  

  <export>
  </export>
</package>
