<?xml version="1.0"?>
<package format="2">
  <name>lidar_imu_calib</name>
  <version>0.0.0</version>
  <description>The lidar_imu_calib package</description>

  <maintainer email="283275126@qq.com">niuzhijiu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 编译依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <!-- 运行依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
  </export>
</package>
